--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>ODIN-Recipes</title>   
+        <link rel="stylesheet" href="../css/main.css">
+
     </head>
     <body>
+        <div class="recipe">
         <h1>Chicken Taco Lasagna</h1>
         <img alt="Chicken Taco Lasagna"  src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4551605.jpg&w=943&h=631&c=sc&poi=face&q=60&orient=true" />
         <p>A chicken taco twist on the classic lasagna.</p>
+        <div class="ingredients">
         <ul>
             <li>4 boneless skinless chicken breasts, cut into 1/4-inch strips</li>
             <li>½ cup lime juice</li>
@@ -18,6 +22,8 @@
             <li>salt and ground black pepper to taste</li>
             <li>1 (8 ounce) package no-boil lasagna noodles, or to taste</li>
         </ul>
+    </div>
+    <div class="howto">
         <h2>Directions</h2>
         <ol>
             <li>Combine chicken, lime juice, and taco seasoning in a large bowl. Stir to make sure chicken is evenly covered.</li>
@@ -26,6 +32,8 @@
             <li>Put a few spoonfuls of the sour cream mixture in the bottom of a 9x9-inch baking dish. Layer noodles and chicken on top. Cover with remaining 1 cup mozzarella cheese.</li>
             <li>Bake in the preheated oven until noodles are tender and cheese is melted, about 1 hour.</li>
         </ol>
+    </div>
+    </div>
     </body>
 
 </html>
